--- a/Main.css
+++ b/Main.css
@@ -1,3 +1,6 @@
+body {
+	width:100%;
+}
 /* Style the tab */
 div.tab {
     overflow: hidden;
@@ -43,21 +46,6 @@ div.tab button.active {
     -webkit-animation: fadeEffect 1s;
     animation: fadeEffect 1s; /* Fading effect takes 1 second */
 }
-
-@-webkit-keyframes fadeEffect {
-    from {opacity: 0;}
-    to {opacity: 1;}
-}
-
-@keyframes fadeEffect {
-    from {opacity: 0;}
-    to {opacity: 1;}
-}
-
-
-
-
-
 
 /* Ribbon Buttons TAB */
 button.ribButton {
