--- a/Main.css
+++ b/Main.css
@@ -1,13 +1,14 @@
 body {
-	width:100%;
+    width:100%;
+	height:100%
 }
 /* Style the tab */
 div.tab {
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
-	-ms-user-select:none;
-	cursor:default;
+    -ms-user-select:none;
+    cursor:default;
 }
 
 /* Style the buttons inside the tab */
@@ -31,54 +32,103 @@ div.tab button.active {
     background-color: #ccc;
 }
 
-/* Style the tab content */
-.tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
+
+/* Style of group title*/
+.groupTitle {
+	/*make text unselectable*/
+	user-select:none;
 	-ms-user-select:none;
-	cursor:default;
+	
+	position:relative;
+	width:100%;
+	font-size:14px;
+    font-family:roboto;
+	background-color:#f8f8f8;
 }
 
-/* Fade effect */
-.tabcontent {
-    -webkit-animation: fadeEffect 1s;
-    animation: fadeEffect 1s; /* Fading effect takes 1 second */
+/* Style of group buttons menu*/
+.groupContent {
+	/*make text unselectable*/
+	user-select:none;
+	-ms-user-select:none;
+	
+    display: inline-block;
+    padding: 3px 3px;
+    border: 1px solid #ccc;
+    /*border-top: none;*/
+    -ms-user-select:none;
+    cursor:default;
 }
 
 /* Ribbon Buttons TAB */
 button.ribButton {
-	width:100px;
-	height:100%;
-	padding: 2px 2px;
-	display:inline-block;
-	border:0;
-	outline:0;
-	overflow:visible; /* Necessary for any images to overflow past button edges */
-	cursor:pointer;
-	background:none; /* This eliminates grey background in FF and IE */
-	box-sizing:content-box; /* By default, Chrome BUTTONS are border-box, this fixes it */
+    width:60px;
+    height:100%;
+    padding: 2px 2px;
+    display:inline-block;
+    border:0;
+    outline:0;
+    overflow:visible; /* Necessary for any images to overflow past button edges */
+    cursor:pointer;
+    background:none; /* This eliminates grey background in FF and IE */
+    box-sizing:content-box; /* By default, Chrome BUTTONS are border-box, this fixes it */
 }
 button.ribButton:hover {
-	background-color:#eeeeee;
+    background-color:#eeeeee;
 }
 button.ribButton:active {
-	background-color:#dddddd;
+    background-color:#dddddd;
 }
 button.ribButton > div.image {
-	display:block;
-	margin:auto;
-	width:80px;
-	height:80px;
-	background-size: 100%;
+    display:block;
+    margin:auto;
+    width:48px;
+    height:48px;
+    background-size: 100%;
 
 }
 button.ribButton > div.describer {
-	text-align: center;
-	padding: 5px 5px;
-	font-size:20px;
-	font-family:roboto;
+	height:30px;
+    text-align: center;
+    padding-top:2px;
+	padding-bottom:2px;
+    font-size:14px;
+    font-family:roboto;
+    
+	user-select:none;
 	-ms-user-select:none;
-	cursor:default;
+    cursor:default;
+}
+
+
+
+.btnToggle {
+	position:absolute;
+	right:0;
+	top:0;
+	margin-top:2px;
+	width:30px;
+	height:80%;
+}
+.arrowUp {
+	display:inline-block;
+	position:relative;
+	content:"";
+	top:-3px;
+	width:6px;
+	height:6px;
+	transform:rotate(225deg);
+	border-right:2px solid rgba(0,0,0,.2);
+	border-bottom:2px solid rgba(0,0,0,.2);
+}
+.arrowDown {
+	display:inline-block;
+	position:relative;
+	content:"";
+	top:-6px;
+	width:6px;
+	height:6px;
+	transform:rotate(45deg);
+	border-right:2px solid rgba(0,0,0,.2);
+	border-bottom:2px solid rgba(0,0,0,.2);
 }
