--- a/Main.css
+++ b/Main.css
@@ -2,6 +2,12 @@ body {
     width:100%;
 	height:100%
 }
+
+.body {
+	display: inline-block;
+	/*background-color:red;*/
+}
+
 /* Style the tab */
 div.tab {
     overflow: hidden;
@@ -62,7 +68,8 @@ div.tab button.active {
 
 /* Ribbon Buttons TAB */
 button.ribButton {
-    width:60px;
+    vertical-align: top;
+	width:60px;
     height:100%;
     padding: 2px 2px;
     display:inline-block;
@@ -109,15 +116,18 @@ button.ribButton > div.describer {
 	margin-top:2px;
 	width:30px;
 	height:80%;
+	border:2px;
 }
 .arrowUp {
 	display:inline-block;
 	position:relative;
 	content:"";
-	top:-3px;
+	/*top:-3px;*/   /*CHROME*/
+	top:-6px;        /*IE*/
 	width:6px;
 	height:6px;
 	transform:rotate(225deg);
+	-ms-transform: rotate(225deg);
 	border-right:2px solid rgba(0,0,0,.2);
 	border-bottom:2px solid rgba(0,0,0,.2);
 }
@@ -125,10 +135,12 @@ button.ribButton > div.describer {
 	display:inline-block;
 	position:relative;
 	content:"";
-	top:-6px;
+	/*top:-6px;*/   /*CHROME*/
+	top:-9px;       /*IE*/
 	width:6px;
 	height:6px;
 	transform:rotate(45deg);
+	-ms-transform: rotate(45deg);
 	border-right:2px solid rgba(0,0,0,.2);
 	border-bottom:2px solid rgba(0,0,0,.2);
 }
